Changing gunicorn configuration to use asynchronous workers.
See issue https://github.com/PTAnywhere/pt-instances-management/issues/13

--- a/roles/pt_instance_manager/templates/config.ini.j2
+++ b/roles/pt_instance_manager/templates/config.ini.j2
@@ -15,7 +15,8 @@ uri: sqlite:///{{ database_file }}
 
 [Celery]
 broker_url: redis://localhost:6379/1
-timeout: 5
+# Revoke task if it does not start in 2 seconds
+task_expiration: 2
 
 
 [PTChecker]
